# AtlasPatch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
Benchmarks/Segmentation/: clam_segmentation.py  clam_segmentation_config.json
Patchification/: How_to_run.txt  inference.py  patch_extractor.py
SAM2_finetuning/: conda_environment.yaml  hpt_sam2_cluster_optuna.py  hpt_sam2_local_optuna.py  requirements.txt  sam2_job_script.sh  test_benchmark.py  test_local_batch.py  train_cluster_batch.py  train_local_batch.py
SAM2_finetuning/config/: cluster_config.yaml  hpt_cluster_config.yaml  hpt_local_config.yaml  local_config.yaml
SAM2_finetuning/scripts/: dataset.py  utils.py
atlas_patch/: __init__.py  cli.py
atlas_patch/core/: __init__.py  config.py  paths.py
atlas_patch/core/wsi/: __init__.py  image_wsi.py  iwsi.py  openslide_wsi.py
atlas_patch/models/patch/: __init__.py  base.py  biomedclip.py  chief_ctranspath.py  clip.py  conch.py  convnext.py  custom.py  dinov2.py  dinov3.py  gigapath.py  hibou.py  hoptimus.py  lunit.py  medsiglip.py  midnight.py  musk.py  omiclip.py  openmidnight.py  pathorchestra.py  phikon.py  plip.py  quilt.py  registry.py  resnet.py  uni.py  virchow.py  vit.py
atlas_patch/orchestration/: parallel.py  runner.py
atlas_patch/services/: __init__.py  extraction.py  feature_embedding.py  interfaces.py  mpp.py  segmentation.py  storage.py  visualization.py  wsi_loader.py
atlas_patch/utils/: __init__.py  contours.py  h5.py  hf.py  image.py  logging_utils.py  params.py
atlas_patch/utils/visualization/: __init__.py  contours.py  mask.py  patches.py
docs/: index.html  style.css
docs/release-notes/: v1.0.0.md
jobs/: atlaspatch_features.slurm.sh  atlaspatch_patch.slurm.sh  slideproc_patch.slurm.sh  trident_features.slurm.sh
slide_processor/: __init__.py  cli.py
slide_processor/core/: __init__.py  config.py  models.py  paths.py
slide_processor/core/wsi/: iwsi.py
slide_processor/datasets/: __init__.py  inference_dataset.py
slide_processor/models/patch/: __init__.py  base.py  biomedclip.py  clip.py  convnext.py  dinov2.py  dinov3.py  gigapath.py  hibou.py  hoptimus.py  lunit.py  medsiglip.py  midnight.py  musk.py  openmidnight.py  phikon.py  plip.py  quilt.py  registry.py  resnet.py  uni.py  virchow.py  vit.py
slide_processor/orchestration/: __init__.py  parallel.py  runner.py
slide_processor/patch_extractor/: __init__.py  patch_extractor.py
slide_processor/pipeline/: __init__.py  orchestrator.py  patchify.py
slide_processor/segmentation/: __init__.py  sam2_segmentation.py
slide_processor/services/: extraction.py  feature_embedding.py  interfaces.py  mpp.py  segmentation.py  storage.py  visualization.py  wsi_loader.py
slide_processor/utils/: __init__.py  contours.py  features.py  h5.py  image.py  logging.py  logging_utils.py  params.py  progress.py
slide_processor/utils/visualization/: contours.py  mask.py  patches.py
slide_processor/visualization/: __init__.py  visualize.py
slide_processor/wsi/: __init__.py  image_wsi.py  iwsi.py  openslide_wsi.py  wsi_factory.py
