[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-patch"
version = "1.0.0.post4"
description = "A Python package for processing and handling whole slide images"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [
    {name = "Yousef Kotp"},
    {name = "Omar Metwally"},
    {name = "Ahmed Alagha"},
]
keywords = ["atlas-patch", "whole-slide-image", "wsi", "tissue-segmentation", "patch-extraction", "computational-pathology"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
]

dependencies = [
    "openslide-python>=1.2.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "h5py>=3.8.0",
    "opencv-python>=4.7.0",
    "click>=8.0.0",
    "torch>=2.0.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.5.0",
    "tqdm>=4.66.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "huggingface-hub>=0.23.0",
    "gdown>=5.2.0",
    "transformers>=4.41.0",
    "sentencepiece>=0.2.0",
    "open-clip-torch>=2.24.0",
    "fairscale>=0.4.0",
    "einops>=0.8.0",
    "einops-exts>=0.0.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

# See README for installation instructions:
#   pip install git+https://github.com/facebookresearch/sam2.git  (required)
#   pip install git+https://github.com/Mahmoodlab/CONCH.git       (optional)
#   pip install git+https://github.com/lilab-stanford/MUSK.git    (optional)

[project.scripts]
atlaspatch = "atlas_patch.cli:main"

[tool.setuptools]
packages = ["atlas_patch"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["atlas_patch"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
